# DirView

./: CMakeLists.txt  Makefile  README.md  dirview.pro
.github/workflows/: build.yml  debian.yml
debian/: changelog  control  install
debian/pathces/: changes.patch
src/: FileSystemModel.cpp  FileSystemModel.h  MainWindow.cpp  MainWindow.h  Makefile  SortFilterProxyModel.cpp  SortFilterProxyModel.h  dirview  dirview.pro  hello.cpp  main.cpp
